<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/ip_color_primary"
    android:clickable="true">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_back_press"
        android:padding="12dp"
        android:contentDescription="@string/arrow_back"
        app:srcCompat="@drawable/ic_arrow_back" />

    <View
        android:layout_width="2px"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@id/btn_back"
        android:background="#2E2E32" />

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/btn_back"
        android:text="@string/picture"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/selector_top_ok"
        android:minHeight="30dp"
        android:minWidth="48dp"
        android:paddingRight="16.0dp"
        android:paddingLeft="16.0dp"
        android:text="@string/complete_0_3"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/btn_del"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_back_press"
        android:padding="12dp"
        app:srcCompat="@drawable/ic_vector_delete"
        android:visibility="gone" />
</RelativeLayout>