<LinearLayout android:id="@+id/content"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#000"
              android:orientation="vertical">

    <include
        android:id="@+id/top_bar"
        layout="@layout/include_top_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#111111">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="50dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingStart="2dp" />

        <RelativeLayout
            android:id="@+id/footer_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@color/ip_color_primary">

            <RelativeLayout
                android:id="@+id/ll_dir"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/tv_dir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/ip_all_images"
                    android:textColor="#CFCFCF"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tv_dir"
                    android:layout_marginBottom="2dp"
                    android:src="@mipmap/text_indicator"
                    android:contentDescription="@string/indicator"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tv_dir" />

            </RelativeLayout>


            <TextView
                android:id="@+id/btn_preview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/review_default"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:paddingStart="16dp"
                android:layout_alignParentEnd="true"
                android:paddingEnd="16dp" />

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
